Improve Reflection in GhidrathonScriptProvider (#9)
Removes deprecated Java call to newInstance with reflective
instantiations